--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
   <header>
-      <div class="wrapper"></div>
+      <div class="wrapper">
+          <div class="header-container">
+            <div class="logo"><img src="src/logo.svg" alt="logo"></div>
+            <form action="" method="get">
+                <input type="search" name="q" placeholder="Поиск по сайту"> 
+               </form>
+          </div>
+      </div>
   </header>  
 </body>
 </html>
