--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>test</title>
 </head>
 <body>
@@ -12,10 +14,11 @@
           <div class="header-container">
             <div class="logo"><img src="src/logo.svg" alt="logo"></div>
             <form action="" method="get">
-                <input type="search" name="q" placeholder="Поиск по сайту"> 
+                <input class="search" type="search" name="q" placeholder="Поиск по сайту"> 
                </form>
           </div>
       </div>
+      <hr>
   </header>  
 </body>
 </html>
