--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
           </div>
       </div>
       <hr>
-  </header>  
+      <div class="wrapper">
+        <nav>
+            <ul class="navigation">
+                <li>О компании</li>
+                <li>Услуги</li>
+                <li>Объекты</li>
+                <li>Закупки</li>
+                <li>Партнеры</li>
+                <li>Новости</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+      </div>
+  </header>
+  <main>
+      <div class="wrapper">
+      </div>
+  </main>  
 </body>
 </html>
