--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <div class="wrapper">
         <nav>
             <ul class="navigation">
-                <li>О компании</li>
-                <li>Услуги</li>
-                <li>Объекты</li>
-                <li>Закупки</li>
-                <li>Партнеры</li>
-                <li>Новости</li>
-                <li>Контакты</li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Объекты</a></li>
+                <li><a href="#">Закупки</a> </li>
+                <li><a href="#">Партнеры</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
       </div>
