feat: add slider section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,19 @@
       </div>
   </header>
   <main>
+    <section class="slider">
       <div class="wrapper">
+            <div class="slider-container">
+                <button class="slider-btn">наши компетенции</button>
+                <h1>Объекты химической промышленности</h1>
+                <p>Важнейшим преимуществом компании является способность проектировать и строить «под ключ». 
+                 При этом данные процессы ведутся одновременно, что позволяет заказчику значительно сократить
+                 общий строительный цикл объекта
+                </p>
+            </div>
+            <div class="slider-pagination"></div>
       </div>
+    </section>
   </main>  
 </body>
 </html>
