--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
                  общий строительный цикл объекта
                 </p>
             </div>
-            <div class="slider-pagination"></div>
+            <div class="slider-pagination">
+                <div class="pagination"></div>
+                <div class="pagination"></div>
+                <div class="pagination"></div>
+                <div class="pagination"></div>
+                <div class="pagination"></div>
+            </div>
       </div>
     </section>
   </main>  
