feat: add services section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
             </div>
       </div>
     </section>
+    <section>
+        <div class="wrapper">
+        <div class="services">
+        <div class="service">
+            <div class="service-img"><img src="src/ic_1.svg" alt="img"></div>
+            <div class="service-name"><a href="#">Услуги проектирования</a> </div>
+        </div>
+        <div class="service">
+            <div class="service-img"><img src="src/ic_2.svg" alt="img"></div>
+            <div class="service-name"><a href="#">Строительно- монтажные работы</a></div>
+        </div>
+        <div class="service">
+            <div class="service-img"><img src="src/ic_3.svg" alt="img"></div>
+            <div class="service-name"><a href="#">Экспертная деятельность</a></div>
+        </div>
+        <div class="service">
+            <div class="service-img"><img src="src/ic_4.svg" alt="img"></div>
+            <div class="service-name"><a href="#">Техническое обслуживание</a></div>
+        </div>
+        <div class="service">
+            <div class="service-img"><img src="src/ic_5.svg" alt="img"></div>
+            <div class="service-name"><a href="#">Испытательная лаборатория</a></div>
+        </div>
+    </div>
+    </div>
+    <hr>
+    </section>
+    <section class="new"></section>
   </main>  
 </body>
 </html>
