fix: search input

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="logo"><img src="src/logo.svg" alt="logo"></div>
             <form action="" method="get">
                 <input class="search" type="search" name="q" placeholder="Поиск по сайту"> 
+                <button class="submit" type="submit"><img src="./src/search.svg" alt=search"></button>
                </form>
           </div>
       </div>
