--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
     </section>
     <section class="new"></section>
   </main>  
-  <script src="styles/index.js"></script>
+  <script src="src/index.js"></script>
 </body>
 </html>
