--- a/index.html
+++ b/index.html
@@ -1,88 +1,117 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>test</title>
-</head>
-<body>
-  <header>
+  </head>
+  <body>
+    <header>
       <div class="wrapper">
-          <div class="header-container">
-            <div class="logo"><img src="src/logo.svg" alt="logo"></div>
-            <form action="" method="get">
-                <input class="search" type="search" name="q" placeholder="Поиск по сайту"> 
-                <button class="submit" type="submit"><img src="./src/search.svg" alt=search"></button>
-               </form>
-          </div>
+        <div class="header-container">
+          <div class="logo"><img src="src/logo.svg" alt="logo" /></div>
+          <form action="" method="get">
+            <input
+              class="search"
+              type="search"
+              name="q"
+              placeholder="Поиск по сайту"
+            />
+            <button class="submit" type="submit">
+              <img src="./src/search.svg" alt=search">
+            </button>
+          </form>
+        </div>
       </div>
-      <hr>
+      <hr />
       <div class="wrapper">
         <nav>
-            <ul class="navigation">
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Объекты</a></li>
-                <li><a href="#">Закупки</a> </li>
-                <li><a href="#">Партнеры</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
+          <ul class="navigation">
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Услуги</a></li>
+            <li><a href="#">Объекты</a></li>
+            <li><a href="#">Закупки</a></li>
+            <li><a href="#">Партнеры</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
         </nav>
       </div>
-  </header>
-  <main>
-    <section class="slider">
-      <div class="wrapper">
-            <div class="slider-container">
-                <button class="slider-btn">наши компетенции</button>
-                <h1>Объекты химической промышленности</h1>
-                <p>Важнейшим преимуществом компании является способность проектировать и строить «под ключ». 
-                 При этом данные процессы ведутся одновременно, что позволяет заказчику значительно сократить
-                 общий строительный цикл объекта
-                </p>
-            </div>
-            <div class="slider-pagination">
-                <div class="pagination"></div>
-                <div class="pagination"></div>
-                <div class="pagination"></div>
-                <div class="pagination"></div>
-                <div class="pagination"></div>
-            </div>
-      </div>
-    </section>
-    <section>
+    </header>
+    <main>
+      <section class="slider">
         <div class="wrapper">
-        <div class="services">
-        <div class="service">
-            <div class="service-img"><img src="src/ic_1.svg" alt="img"></div>
-            <div class="service-name"><a href="#">Услуги проектирования</a> </div>
+          <div class="slider-container">
+            <button class="slider-btn">наши компетенции</button>
+            <h1>Объекты химической промышленности</h1>
+            <p>
+              Важнейшим преимуществом компании является способность
+              проектировать и строить «под ключ». При этом данные процессы
+              ведутся одновременно, что позволяет заказчику значительно
+              сократить общий строительный цикл объекта
+            </p>
+          </div>
+          <div class="slider-pagination">
+            <div class="pagination"></div>
+            <div class="pagination"></div>
+            <div class="pagination"></div>
+            <div class="pagination"></div>
+            <div class="pagination"></div>
+          </div>
         </div>
-        <div class="service">
-            <div class="service-img"><img src="src/ic_2.svg" alt="img"></div>
-            <div class="service-name"><a href="#">Строительно- монтажные работы</a></div>
+      </section>
+      <section>
+        <div class="wrapper">
+          <div class="services">
+            <div class="service">
+              <div class="service-img">
+                <img src="src/ic_1.svg" alt="img" />
+              </div>
+              <div class="service-name">
+                <a href="#">Услуги проектирования</a>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service-img">
+                <img src="src/ic_2.svg" alt="img" />
+              </div>
+              <div class="service-name">
+                <a href="#">Строительно- монтажные работы</a>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service-img">
+                <img src="src/ic_3.svg" alt="img" />
+              </div>
+              <div class="service-name">
+                <a href="#">Экспертная деятельность</a>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service-img">
+                <img src="src/ic_4.svg" alt="img" />
+              </div>
+              <div class="service-name">
+                <a href="#">Техническое обслуживание</a>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service-img">
+                <img src="src/ic_5.svg" alt="img" />
+              </div>
+              <div class="service-name">
+                <a href="#">Испытательная лаборатория</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="service">
-            <div class="service-img"><img src="src/ic_3.svg" alt="img"></div>
-            <div class="service-name"><a href="#">Экспертная деятельность</a></div>
-        </div>
-        <div class="service">
-            <div class="service-img"><img src="src/ic_4.svg" alt="img"></div>
-            <div class="service-name"><a href="#">Техническое обслуживание</a></div>
-        </div>
-        <div class="service">
-            <div class="service-img"><img src="src/ic_5.svg" alt="img"></div>
-            <div class="service-name"><a href="#">Испытательная лаборатория</a></div>
-        </div>
-    </div>
-    </div>
-    <hr>
-    </section>
-    <section class="new"></section>
-  </main>  
-  <script src="src/index.js"></script>
-</body>
+        <hr />
+      </section>
+      <section class="new"></section>
+    </main>
+    <script src="src/index.js"></script>
+  </body>
 </html>
