--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="src/MuseoSans Cyrl/stylesheet.css">
+    <link rel="stylesheet" href="src/MuseoSansCyrl/stylesheet.css">
     <link rel="stylesheet" href="styles/styles.css" />
     <title>test</title>
   </head>
@@ -14,7 +14,7 @@
       <div class="wrapper">
         <div class="header-container">
           <div class="logo"><img src="src/logo.svg" alt="logo" /></div>
-          <form action="" method="get">
+          <form action="#" method="get">
             <input
               class="search"
               type="search"
@@ -22,7 +22,7 @@
               placeholder="Поиск по сайту"
             />
             <button class="submit" type="submit">
-              <img src="./src/search.svg" alt=search">
+              <img src="./src/search.svg" alt="search">
             </button>
           </form>
         </div>
@@ -66,6 +66,7 @@
       </section>
       <section>
         <div class="wrapper">
+          <div class="service-center">
           <div class="services">
             <div class="service">
               <div class="service-img">
@@ -108,6 +109,7 @@
               </div>
             </div>
           </div>
+        </div>
         </div>
         <hr />
       </section>
